--- a/static/404.html
+++ b/static/404.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Error - Page not found</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-WKJQ5QHQTJ');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WKJQ5QHQTJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-WKJQ5QHQTJ');
+    </script>
     <style>
         * {
             margin: 0;
@@ -22,10 +21,10 @@
         html, body {
             height: 100%;
             font-family: 'Lato', sans-serif;
-            color: black;
+            color: white; /* Updated text color to white */
         }
         body {
-            background-color: #f7f7f7;
+            background-color: #333; /* Updated background color */
         }
         .container {
             display: flex;
@@ -44,12 +43,12 @@
             font-size: 5rem;
             margin-bottom: 2rem;
             text-shadow: 0 2px 2px rgba(0,0,0,0.3);
-            color:white;
+            color: #FF6347; /* Updated heading color to Tomato */
         }
         p {
             font-size: 1.5rem;
             margin-bottom: 2rem;
-            color: white;
+            color: #87CEEB; /* Updated paragraph color to SkyBlue */
         }
         .button-group {
             display: flex;
@@ -58,7 +57,7 @@
             margin-top: 2rem;
         }
         button {
-            background-color: #333;
+            background-color: #8B008B; /* Updated button color to DarkMagenta */
             color: #fff;
             border: none;
             border-radius: 0.5rem;
@@ -69,7 +68,7 @@
             transition: all 0.3s ease-in-out;
         }
         button:hover {
-            background-color: #000;
+            background-color: #4B0082; /* Updated button hover color to Indigo */
             transform: translateY(-2px);
         }
         button:active {
@@ -96,10 +95,10 @@
         <p>Oops! The page you're looking for doesn't exist.</p>
         <div class="button-group">
             <button onclick="location.href='/';">Go back home</button>
-            <button onclick="window.open('https://forms.gle/PmYG2crJGaYCiWmN9', '_blank');">Report this issue</button>
+            <button onclick="window.open('https://tinyurl.com/uzdhshne', '_blank');">Report this issue</button>
         </div>
     </div>
-       <!--- Advertisement Start-->
-       <!-- Advertisement End-->
+    <!--- Advertisement Start-->
+    <!-- Advertisement End-->
 </body>
 </html>
